tests/fixtures/diagnostics/semantic_invalid_assignment.human.golden
[RUFPARSE001] [parser] error: Expected expression
  --> semantic_invalid_assignment.ruff:2:9
  = help: Fix the parse error and rerun Ruff.