tests/fixtures/diagnostics/semantic_invalid_assignment.ruff
func broken() {
    1 = 2
}
